--- a/src/Components/DoctoDashboardCss/Navbar.css
+++ b/src/Components/DoctoDashboardCss/Navbar.css
@@ -1,19 +1,25 @@
 .Navbar_Container{
     max-width: 100%;
-    background-color: rgb(51, 28, 28);
+    background-color: #5ADDA6;
     padding: 5px 50px;
-    height: fit-content;
+    /* height: fit-content; */
+    height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: white;
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 60%);
 }
 
 .Navbar_logo{
-    width: 100px;
+    width: 10%;
     height: auto;
 }
-.Navbar_logo >img{
+.Navbar_logo > img{
     width: 100%;
+    border-radius: 3px;
+    height: 100%;
+    border: 1px solid black;
 }
 
 .Navbar_ItemsContainer{
@@ -23,5 +29,6 @@
 
 .Navbar_Item{
     padding-left:25px;
-    color: white;
+    font-size: 20px;
+    /* color: white; */
 }
