--- a/src/Components/PatientDashboardCss/PatientHome.css
+++ b/src/Components/PatientDashboardCss/PatientHome.css
@@ -79,7 +79,7 @@
 }
 
 .smAppointmentCard{
-    background-color: #f0ca43;
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
     padding: 20px;
