--- a/src/Components/DoctoDashboardCss/Doctorprofile.css
+++ b/src/Components/DoctoDashboardCss/Doctorprofile.css
@@ -28,6 +28,7 @@ body {
 	background-color: white;
 	border-radius: 1rem;
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.6);
+    background-image: url("https://i.imgur.com/9kN79I8.png");
 }
 
 .profile-image {
