--- a/src/Components/DoctoDashboardCss/Navbar.css
+++ b/src/Components/DoctoDashboardCss/Navbar.css
@@ -1,13 +1,13 @@
 .Navbar_Container{
     max-width: 100%;
-    background-color: #28D2D0;
+    background-color: #fff;
     padding: 5px 50px;
     /* height: fit-content; */
     height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: white;
+    color: rgb(0, 0, 0);
     box-shadow: 0px 0px 10px rgb(0 0 0 / 60%);
     border: 1px solid black;
     border-radius: 5px;
