--- a/src/Components/PatientDashboardCss/PatientHome.css
+++ b/src/Components/PatientDashboardCss/PatientHome.css
@@ -1,3 +1,8 @@
+a{
+    text-decoration: none;
+}
+
+
 .Patient_Body{
     background-color: #f2f2f2;
     max-height: 100vh;
@@ -114,6 +119,8 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-bottom:1px solid #0e323f;
+    text-decoration: none;
+    text-transform: none;
 }
 
 .smFooter{
