--- a/src/Components/Patientprofile/Patientprofile.css
+++ b/src/Components/Patientprofile/Patientprofile.css
@@ -2,3 +2,22 @@
     margin: 0rem !important;   
     border: 1px solid red; 
 }
+
+.patient_profile_container{
+
+    max-height: 100vh;
+    height: 100vh;
+   display: flex;
+   justify-content: center; 
+
+}
+
+.PatientProfile.profile_card{
+    margin: auto !important;
+    left: 0 !important;
+    right: 0 !important;
+    top: 0 !important;
+    bottom: 0 !important;
+    height: fit-content;
+
+}
