--- a/src/Components/DoctoDashboardCss/Doctorprofile.css
+++ b/src/Components/DoctoDashboardCss/Doctorprofile.css
@@ -30,6 +30,13 @@ body {
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.6);
     background-image: url("https://i.imgur.com/9kN79I8.png");
 }
+.profile-card-2{
+	padding: 30px ;
+}
+.profile-image-2{
+	background-image: url("https://i.imgur.com/jWXijAh.png") !important;
+}
+
 
 .profile-image {
     margin: 0 auto;
