--- a/src/Components/Hospitals/hospitals.css
+++ b/src/Components/Hospitals/hospitals.css
@@ -4,7 +4,7 @@
   padding: 10px;
 }
 .hospitals_list {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(5, 1fr);
@@ -14,6 +14,7 @@
   margin: 10px;
   padding: 5px;
   border-radius: 5px;
+  /* background-color: aliceblue; */
   /* text-align: center; */
 }
 .medicals_list {
@@ -63,4 +64,9 @@
 }
 .hospital_detail{
     padding: 10px;
+}
+
+.mainCont {
+  /* background-color: #82a2ee; */
+  background: linear-gradient(to right, #c6d6fa, #94b0f1);
 }
